[gd_scene load_steps=30 format=3 uid="uid://duepgnu8y1and"]

[ext_resource type="Script" uid="uid://coao4y05pcdgn" path="res://Scripts/main/main.gd" id="1_jkdf5"]
[ext_resource type="Texture2D" uid="uid://yu1oa05kv1va" path="res://Enviroment/cyberpunk-corridor-PREVIEW.png" id="2_wsu2k"]
[ext_resource type="Script" uid="uid://bndl67wmbc8jy" path="res://Scripts/main/button_red.gd" id="3_k12tt"]
[ext_resource type="Texture2D" uid="uid://0o1jpti3l37p" path="res://assets/red_button.png" id="4_h1bgf"]
[ext_resource type="Script" uid="uid://yusnh3yvlhqf" path="res://Scripts/main/button_blue.gd" id="5_b3802"]
[ext_resource type="Texture2D" uid="uid://2qsitcmgx1wg" path="res://assets/blue_button.png" id="6_fevyy"]
[ext_resource type="Script" uid="uid://bydqwhgdkw4lf" path="res://Scripts/main/door.gd" id="7_hibaj"]
[ext_resource type="Texture2D" uid="uid://b8eu1upsokihp" path="res://assets/close_door.png" id="8_pdsj5"]
[ext_resource type="Texture2D" uid="uid://cuydxbg6y0ld0" path="res://assets/open_door.png" id="9_ee4r6"]
[ext_resource type="Script" uid="uid://c7touotynsbkk" path="res://Scripts/main/player_1.gd" id="10_gt3je"]
[ext_resource type="Texture2D" uid="uid://du2o4mrlcp0br" path="res://Character/idle.png" id="11_3pmx8"]
[ext_resource type="Texture2D" uid="uid://b8ltjdyr4vcgd" path="res://Character/jump.png" id="12_u50mg"]
[ext_resource type="Texture2D" uid="uid://qutvpbxvje7n" path="res://Character/run.png" id="13_cbgmd"]
[ext_resource type="Script" uid="uid://caqpk01cs7slh" path="res://Scripts/main/player_2.gd" id="14_1w6v2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_272bh"]
size = Vector2(4664, 112)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_onhew"]
size = Vector2(105, 62.6875)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mxskl"]
size = Vector2(194, 348.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_kek77"]
atlas = ExtResource("11_3pmx8")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4c57u"]
atlas = ExtResource("12_u50mg")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_efxa6"]
atlas = ExtResource("12_u50mg")
region = Rect2(256, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dg77c"]
atlas = ExtResource("12_u50mg")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycdy4"]
atlas = ExtResource("12_u50mg")
region = Rect2(384, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bvp3"]
atlas = ExtResource("13_cbgmd")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lquwl"]
atlas = ExtResource("13_cbgmd")
region = Rect2(256, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mycd"]
atlas = ExtResource("13_cbgmd")
region = Rect2(384, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_272bh"]
atlas = ExtResource("13_cbgmd")
region = Rect2(512, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vw27"]
atlas = ExtResource("13_cbgmd")
region = Rect2(640, 0, 128, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_kek77"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kek77")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4c57u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efxa6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dg77c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycdy4")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bvp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lquwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mycd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_272bh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vw27")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4c57u"]
size = Vector2(48, 96)

[node name="Main" type="Node2D"]
script = ExtResource("1_jkdf5")

[node name="Parallax2D" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Parallax2D"]

[node name="Sprite2D" type="Sprite2D" parent="Parallax2D/ParallaxLayer"]
position = Vector2(2106.73, 317)
scale = Vector2(3.625, 3.71591)
texture = ExtResource("2_wsu2k")

[node name="Ground" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(2166, 613)
shape = SubResource("RectangleShape2D_272bh")

[node name="ButtonRed" type="StaticBody2D" parent="."]
script = ExtResource("3_k12tt")
required_player = "Player1"

[node name="Sprite2D" type="Sprite2D" parent="ButtonRed"]
position = Vector2(2328, 544)
scale = Vector2(0.168945, 0.143555)
texture = ExtResource("4_h1bgf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ButtonRed"]
position = Vector2(2328.5, 528.875)
shape = SubResource("RectangleShape2D_onhew")

[node name="Area2D" type="Area2D" parent="ButtonRed"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ButtonRed/Area2D"]
position = Vector2(2328, 523)
shape = SubResource("RectangleShape2D_onhew")

[node name="ButtonBlue" type="StaticBody2D" parent="."]
script = ExtResource("5_b3802")
required_player = "Player2"

[node name="Sprite2D" type="Sprite2D" parent="ButtonBlue"]
position = Vector2(3530, 547)
scale = Vector2(0.168945, 0.143555)
texture = ExtResource("6_fevyy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ButtonBlue"]
position = Vector2(3523.5, 530.688)
shape = SubResource("RectangleShape2D_onhew")

[node name="Area2D" type="Area2D" parent="ButtonBlue"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ButtonBlue/Area2D"]
position = Vector2(3524, 523)
shape = SubResource("RectangleShape2D_onhew")

[node name="Door" type="StaticBody2D" parent="."]
script = ExtResource("7_hibaj")

[node name="CloseDoor" type="Sprite2D" parent="Door"]
position = Vector2(2998, 428)
scale = Vector2(0.606725, 0.606725)
texture = ExtResource("8_pdsj5")
flip_h = true

[node name="OpenDoor" type="Sprite2D" parent="Door"]
visible = false
position = Vector2(2975, 433)
scale = Vector2(0.606725, 0.606725)
texture = ExtResource("9_ee4r6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]
position = Vector2(2997, 380.25)
shape = SubResource("RectangleShape2D_mxskl")

[node name="Player1" type="CharacterBody2D" parent="."]
script = ExtResource("10_gt3je")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player1"]
position = Vector2(27, 481)
scale = Vector2(1.8125, 2.29688)
sprite_frames = SubResource("SpriteFrames_kek77")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player1"]
position = Vector2(34, 508)
shape = SubResource("RectangleShape2D_4c57u")

[node name="Camera2D" type="Camera2D" parent="Player1"]
limit_left = 0
limit_top = 0
limit_bottom = 0

[node name="Player2" type="CharacterBody2D" parent="."]
script = ExtResource("14_1w6v2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player2"]
position = Vector2(97, 480)
scale = Vector2(1.8125, 2.29688)
sprite_frames = SubResource("SpriteFrames_kek77")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2"]
position = Vector2(101, 508)
shape = SubResource("RectangleShape2D_4c57u")

[node name="Camera2D" type="Camera2D" parent="Player2"]
limit_left = 0
limit_top = 0
limit_bottom = 0

[connection signal="button_pressed" from="ButtonRed" to="Door" method="_on_button_red_button_pressed"]
[connection signal="button_released" from="ButtonRed" to="Door" method="_on_button_red_button_released"]
[connection signal="button_pressed" from="ButtonBlue" to="Door" method="_on_button_blue_button_pressed"]
[connection signal="button_released" from="ButtonBlue" to="Door" method="_on_button_blue_button_released"]
